<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginUser.LoginActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/useredit"
        app:layout_constraintTop_toTopOf="@id/useredit"
        android:layout_marginEnd="10dp"
        android:text="@string/user"
        android:textSize="20sp"
        android:id="@+id/userview"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/passwordedit"
        app:layout_constraintTop_toTopOf="@id/passwordedit"
        android:layout_marginEnd="10dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:id="@+id/passview"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black_alpha_10"
        android:id="@+id/useredit"
        android:maxLines="1"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/useredit"
        android:layout_marginTop="10dp"
        android:background="@color/black_alpha_10"
        android:id="@+id/passwordedit"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordedit"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/passwordedit"
        app:layout_constraintEnd_toEndOf="@id/passwordedit"
        android:layout_marginTop="10dp"
        android:id="@+id/loginbtn"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@id/passwordedit"
        app:layout_constraintEnd_toEndOf="@id/passwordedit"
        android:layout_marginTop="10dp"
        android:id="@+id/registerbtn"
        />




</androidx.constraintlayout.widget.ConstraintLayout>